--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "mermaid": "^11.12.0",
     "next": "^16.0.0",
     "next-mdx-remote": "^5.0.0",
+    "ogl": "^1.0.11",
     "react": "^19.0.0-rc.1",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0-rc.1",
